# wasm-morpho

./: CMakeLists.txt  main.cpp  main_pybind.cpp  main_wasm.cpp  morphology.cpp  morphology.hpp
.github/workflows/: ci.yml
src/: morphology.cpp  morphology.hpp  pybind-utils.cpp  pybind-utils.hpp
tests/: test_concom.py
